<resources>
    <string name="app_name">QuickMix</string>
    <string name="main_text_1"> A Masterpiece for</string>
    <string name="masterchef_string">MasterChefs</string>
    <string name="autoclean_string">Auto Clean</string>
    <string name="sauces_string">Sauces</string>
    <string name="soups_string">soups</string>
    <string name="ice_cream_string">ice creams</string>
    <string name="smoothie_string">smoothies</string>
    <string name="title_activity_navigation_menu">NavigationMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="products_string">Products</string>
    <string name="accessories_string">Accessories</string>
    <string name="shopping_cart_string">Shopping Cart</string>
    <string name="shopping_cart_empty_string">Cart is Empty</string>
    <string name="order_summary_string">Order Summary</string>
    <string name="order_detail_string">Order Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="container_string">Containers and Attachments</string>
    <string name="discount_coupon_string">Discount Coupon</string>
    <string name="select_day_time_string">Select Day and Time</string>
    <string name="date_selected_string">Date selected :</string>
    <string name="know_more_string">Know More</string>

    <string name="quick_mix_string">Quick Mix</string>
    <string name="quick_mix_desc_string">Behold the power of Masterpiece</string>
    <string name="about_content1_title_string">What is Quick Mix?</string>
    <string name="about_content1_string">It’s this All-In-One marvel that empowers you to be a prodigious master chef.
        Quick Mix in itself is a complete chef for you, as it does the work of multiple kitchen appliances.
        You’ll be more than ready to come up with innovative and mouth-watering delicacies.
        With the 5 pre-set programs nad Auto Clean feature, you can make Hot Soups | Ice-Creams | Smoothies | Sauces.
    </string>
    <string name="about_content2_title_string">Why Quick Mix?</string>
    <string name="about_content2_string">The right equipment is your QUICK way to becoming a renowned chef.
        A multi-faceted machine, that lets you cook lip-smacking and nutritious food in the most effortless way.
        Quick Mix gives you the liberty to introduce healthy food in the lives of your beloved ones.
        \n\n
        2250 Watt | 3 HP Motor| 13-In-1 | Noise Dampening Technology | Easy To Clean
    </string>

    <string name="recipe_string">Recipes</string>

    <string name="product_highlights_title">Unbeatable features</string>
    <string name="product_highlights_text1">Noise Dampening Technology</string>
    <string name="product_highlights_text2">3HP Motor</string>
    <string name="product_highlights_text3">5 pre-set program</string>
    <string name="product_highlights_text4">High Power Blade</string>
    <string name="product_highlights_text5">2 ltr. food grade container</string>
    <string name="product_highlights_text6">Instruction Manual</string>
    <string name="buy_now_string">Buy Now</string>
    <string name="proceed_string">Proceed</string>
    <string name="search_string">Search</string>
    <string name="go_string">Go</string>
    <string name="checkout_string">Checkout our</string>
    <string name="proceed_to_checkout_string">Proceed to Checkout</string>
    <string name="add_coupon_code_string">Add Coupon Code</string>
    <string name="proceed_to_payment_string">Proceed to Payment</string>
    <string name="cash_on_delivery_string">Cash on Delivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_vid_string">Tap to
        play video</string>
    <string name="price_string">Price</string>
    <string name="name_string">Name</string>
    <string name="email_string">Email Id</string>
    <string name="register_product_string">Register Your Product</string>
    <string name="to_claim_reward_string">to claim your reward</string>
    <string name="verify_string">VERIFY</string>
    <string name="pincode_string">Pincode</string>
    <string name="verify_desc_string">Please verify the code sent to your mobile number +91 XXXXX XX254</string>
    <string name="register_string">Register</string>
    <string name="register_account_string">Register Account</string>
    <string name="address_string">Address</string>
    <string name="delivery_location_string">Delivery Location</string>
    <string name="send_otp_string">Send OTP</string>
    <string name="enter_mobile_no_string">Mobile No.</string>
    <string name="mobile_no_string">Mobile Number</string>
    <string name="select_date_string">Select Date</string>
    <string name="verify_account_string">Verify Account</string>
    <string name="my_account_string">My Account</string>
    <string name="my_orders_string">My Orders</string>
    <string name="save_profile_detail_string">Save Profile Details</string>
    <string name="verify_account_desc_string">Verify your mobile number to get started!</string>
    <string name="quick_mix_reward_program_string">Reward Program</string>
    <string name="quick_mix_reward_desc_string">The Quick Mix reward program is your opportunity to become the ambassador of this amazing product. Moreover, the points you receive from referrals can be used for purchasing Quick Mix products and accessories.
        Spread the word and let others experience the joy of cooking!</string>

    <string name="ty_title1">Thank You For</string>
    <string name="ty_title2">YOUR ORDER</string>
    <string name="ty_f_title1">Order</string>
    <string name="ty_f_title2">FAILED!</string>
    <string name="live_demo_title1">Try a quick mix</string>
    <string name="live_demo_title2">live demo</string>
    <string name="submit_string">Submit</string>
    <string name="mobile_number_string">Mobile Number</string>
    <string name="get_otp_string">Get OTP</string>
    <string name="not_registered_string">Not yet Registered ? Register</string>
    <string name="registered_string">Register</string>
    <string name="try_recipes_string">Try our Recipes</string>
    <string name="checkout_recipes_string">Checkout our Recipes</string>
    <string name="add_to_cart_string">Add to Cart</string>
    <string name="error_message">Something went wrong!</string>
    <string name="title_activity_time_slot">TimeSlotActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="previous">Previous</string>
    <string name="rupee_string">\u20B9 %d</string>
    <string name="rupee__double_string">\u20B9 %s</string>
    <string name="total_items_string">"Total : %d Items"</string>
    <string name="sub_total_string">Sub Total : </string>
    <string name="gross_amount_string">Gross Amount : </string>
    <string name="coupon_code_string">Coupon Code : </string>
    <string name="discount_amount_string">Discount Amount : </string>
    <string name="cgst_string">CGST : </string>
    <string name="sgst_string">SCGT : </string>
    <string name="igst_string">IGST : </string>
    <string name="GST_string">GST : %s</string>
    <string name="gst_price_string">GST Price : </string>
    <string name="total_string">Total : </string>
    <string name="gst_string"> Incl of all taxes and shipping charges</string>
    <string name="registered_desc_string">Create your account in a QUICK time Proceed with the information provided</string>

    <string name="ty_string">Your order %s is placed and is now being processed </string>
    <string name="ty_fail_string">Your order is not processed</string>
    <string name="back_to_home_string">Back to Home</string>
    <string name="no_orders_string">No Orders</string>
    <string name="calories_string">Calories : </string>
    <string name="duration_string">Duration : </string>
    <string name="difficulty_string">Difficulty : </string>
    <string name="expiry_string">Expiry Date : </string>
    <string name="redeem_string">Redeem Value : </string>
    <string name="yield_string">Yield : </string>
    <string name="cancel_string">Cancel </string>
    <string name="edit_profile_string">Edit Profile </string>

    <string name="address1_string">Flat no/ Building Name </string>
    <string name="address2_string">Locality/ Area /Street</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="update_title">Hey! It\'s time to update</string>
    <string name="update_desc">Update your app to continue using our \namazing services</string>
    <string name="btn_update_string">UPDATE</string>
</resources>