<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_black"
    tools:context=".fragment.RewardVerifiedAccountFragment">

    <include
        android:id="@+id/main_appBar"
        layout="@layout/appbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/rva_main_title"
        app:layout_constraintTop_toBottomOf="@+id/main_appBar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_30"
        style="@style/title_white_center20_text"
        android:text="@string/quick_mix_string"/>
    <TextView
        android:id="@+id/rva_main_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/rva_main_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/title_red_center20_text"
        android:layout_marginStart="@dimen/dp_30"
        android:text="@string/quick_mix_reward_program_string"/>

    <TextView
        android:id="@+id/rva_main_desc"
        app:layout_constraintTop_toBottomOf="@+id/rva_main_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/style_12_medium"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:text="@string/quick_mix_reward_desc_string"/>




    <androidx.cardview.widget.CardView
        android:id="@+id/otp_card_view"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rva_main_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintVertical_bias="0.5"
        app:cardCornerRadius="@dimen/dp_20"
        app:cardElevation="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/black_gradient_tab_bg">

            <TextView
                android:id="@+id/verify_acc_string"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/title_red_center20_text"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/verify_account_string"/>

            <TextView
                android:id="@+id/verify_acc_desc"
                app:layout_constraintTop_toBottomOf="@+id/verify_acc_string"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/style_12_center"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:text="@string/verify_account_desc_string"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/verify_acc_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:hint="@string/enter_mobile_no_string"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/verify_acc_desc"
                app:layout_constraintStart_toStartOf="parent"
                />
            <Button
                android:id="@+id/sendOTP"
                app:layout_constraintTop_toBottomOf="@+id/verify_acc_ET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_20"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent=".15"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent=".4"
                android:background="@drawable/ic_buy_now_button"
                android:text="@string/send_otp_string"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        app:layout_constraintTop_toBottomOf="@+id/otp_card_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".4"
        android:background="@drawable/ic_buy_now_button"
        android:text="@string/register_string"/>

</androidx.constraintlayout.widget.ConstraintLayout>