<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_black"
    android:clickable="false"
    tools:context=".fragment.RequestLiveDemoFragment">

    <include
        android:id="@+id/main_appBar"
        layout="@layout/appbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/live_demo_card_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/main_appBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".6"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".80"
            app:layout_constraintVertical_bias="0.2"
            android:background="@drawable/ic_tab">
            <TextView
                android:id="@+id/ld_main_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_75"
                style="@style/title_white_center20_text"
                android:text="@string/live_demo_title1"/>
            <TextView
                android:id="@+id/ld_main_subtitle"
                app:layout_constraintTop_toBottomOf="@+id/ld_main_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/title_red_center20_text"
                android:text="@string/live_demo_title2"/>



            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ld_name_ET"
                style="@style/style_16_book_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:hint="@string/name_string"
                android:inputType="textCapWords"
                app:layout_constraintTop_toBottomOf="@+id/ld_main_subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:nextFocusDown="@id/ld_email_ET"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ld_email_ET"
                style="@style/style_16_book_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:hint="@string/email_string"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/ld_name_ET"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:nextFocusDown="@id/ld_contact_ET"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ld_contact_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:hint="@string/enter_mobile_no_string"
                android:inputType="phone"
                style="@style/style_16_book_edit_text"
                app:layout_constraintTop_toBottomOf="@+id/ld_email_ET"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:nextFocusDown="@id/ld_calendar_TV"
                />
             <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ld_calendar_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 style="@style/style_16_book"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_35"
                android:hint="@string/select_date_string"
                 android:drawableEnd="@drawable/ic_calendar"
                app:layout_constraintTop_toBottomOf="@+id/ld_contact_ET"
                app:layout_constraintStart_toStartOf="parent"
                />
            <Button
                android:id="@+id/ld_submit"
                style="@style/style_12_center"
                app:layout_constraintTop_toBottomOf="@+id/ld_calendar_TV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginBottom="@dimen/dp_20"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent=".13"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent=".5"
                android:background="@drawable/ic_buy_now_button"
                android:text="@string/submit_string"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/ld_try_recipe"
        style="@style/style_12_center"
        app:layout_constraintTop_toBottomOf="@+id/live_demo_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5"
        android:background="@drawable/ic_buy_now_button"
        android:text="@string/try_recipes_string"/>

</androidx.constraintlayout.widget.ConstraintLayout>