<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_black"
    tools:context=".fragment.RequestLiveDemoFragment">

    <include
        android:id="@+id/main_appBar"
        layout="@layout/appbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/live_demo_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/main_appBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".58"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".80"
        app:layout_constraintVertical_bias="0.2"
        android:background="@drawable/ic_tab">
        <TextView
            android:id="@+id/register_main_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_75"
            style="@style/title_white_center20_text"
            android:text="@string/register_string"/>
        <TextView
            android:id="@+id/register_main_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/register_main_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title_red_center20_text"
            android:text="@string/register_account_string"/>



        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_name_ET"
            style="@style/style_16_book_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:hint="@string/name_string"
            android:inputType="textCapWords"
            app:layout_constraintTop_toBottomOf="@+id/register_main_subtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:nextFocusDown="@id/register_email_ET"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_email_ET"
            style="@style/style_16_book_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:hint="@string/email_string"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/register_name_ET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:nextFocusDown="@id/register_contact_ET"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/register_contact_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_30"
            android:hint="@string/enter_mobile_no_string"
            android:inputType="phone"
            style="@style/style_16_book_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/register_email_ET"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/reg_desc"
        app:layout_constraintTop_toBottomOf="@+id/live_demo_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/style_12_center"
        android:layout_marginStart="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_50"
        android:text="@string/registered_desc_string"/>
    <Button
        android:id="@+id/register_submit"
        style="@style/style_12_center"
        app:layout_constraintTop_toBottomOf="@+id/reg_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".10"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5"
        android:background="@drawable/ic_buy_now_button"
        android:text="@string/register_string"/>

</androidx.constraintlayout.widget.ConstraintLayout>