<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/theme_black"
    tools:context=".fragment.OrderConfirmationFragment">

    <TextView
        android:id="@+id/ty_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_75"
        style="@style/title_white_center20_text"
        android:text="@string/ty_title1"/>
    <TextView
        android:id="@+id/ty_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/ty_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/title_red_center20_text"
        android:text="@string/ty_title2"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/confetti___tick"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="2dp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/live_demo_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/ty_subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".75"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".80"
        app:layout_constraintVertical_bias="0.2"
        android:background="@drawable/ic_tab">
        <TextView
            android:id="@+id/reg_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ty_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_12_center"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/ty_string"/>
        <Button
            android:id="@+id/ty_confirm_btn"
            style="@style/style_12_center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="bottomNavClick"
            android:layout_marginBottom="@dimen/dp_30"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".10"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".5"
            android:background="@drawable/ic_buy_now_button"
            android:text="@string/back_to_home_string"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>